[gd_scene load_steps=6 format=3 uid="uid://ynpoovsm7nhv"]

[ext_resource type="Script" path="res://Scripts/small_turret.gd" id="1_8mntx"]
[ext_resource type="Texture2D" uid="uid://c25ty0iiqban2" path="res://Textures/Sprites/small_turret.png" id="1_ibnrv"]
[ext_resource type="Script" path="res://Scripts/health_manager.gd" id="3_h55ld"]
[ext_resource type="Script" path="res://Scripts/hurtbox.gd" id="4_up5ph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5iwf"]
size = Vector2(16, 16)

[node name="SmallTurret" type="Node2D"]
script = ExtResource("1_8mntx")

[node name="SmallTurret" type="Sprite2D" parent="."]
position = Vector2(8, 0)
rotation = 1.57079
texture = ExtResource("1_ibnrv")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="Reload" type="Timer" parent="."]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6, -4.76837e-07)
scale = Vector2(1.4, 0.8)

[node name="Offset" type="Timer" parent="."]
one_shot = true

[node name="HealthManager" type="Node" parent="."]
script = ExtResource("3_h55ld")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_manager")]
script = ExtResource("4_up5ph")
health_manager = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_y5iwf")

[connection signal="timeout" from="Reload" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Offset" to="." method="_on_offset_timeout"]
[connection signal="health_depleted" from="HealthManager" to="." method="_on_health_manager_health_depleted"]
